--- a/index.html
+++ b/index.html
@@ -84,5 +84,11 @@
 <img src="Untitled.png" alt="un">
 <source>
 <td></td>
+    <style>
+        html {
+            background-color:blue;
+            color:white;
+        }
+    </style>
 </body>
 </html>
